--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #F6EFE5;
+  background-color: #f5e0c3;
   color: #000000;
   padding: 20px 0;
   text-align: center;
@@ -10,4 +10,18 @@
   z-index: -1;
   margin-top: 100vh;
   margin-bottom: -10%;
+}
+
+.social-links {
+  margin-bottom: 10px;
+}
+
+.social-links a {
+  margin: 0 10px;
+  color: #000000;
+  text-decoration: none;
+}
+
+.social-links a:hover {
+  text-decoration: underline;
 }
