--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #F6EFE5;
+  color: #213547;
+  background-color: #f5e0c3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
