Added shayes application

--- a/src/components/portfolio_cards/portfolio_cards.css
+++ b/src/components/portfolio_cards/portfolio_cards.css
@@ -102,3 +102,8 @@
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
 }
+
+.project-description a {
+    display: block; /* Make each link take up the full width of its container */
+    margin-top: 10px; /* Add some space between the links */
+}
