--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -7,6 +7,7 @@
     position: relative; /* Allow for left positioning */
     left: 0; /* Initial left position */
     opacity: 0; /* Start with opacity 0 */
+    z-index: 1; /* Ensure the image is on top */
 }
 
 .title-image.fade-in {
@@ -20,6 +21,8 @@
     margin-left: 25vw;
     opacity: 0; /* Start with opacity 0 */
     transition: opacity 0.3s ease; /* Smooth transition for opacity */
+    position: relative; /* Ensure z-index works */
+    z-index: 0; /* Ensure the text is below the image */
 }
 
 .about-me-img-container
