Adding to hobbies page

--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -55,9 +55,13 @@
 }
 
 .software-dev-title-text {
+    font-family: 'Montserrat', sans-serif; /* Use Montserrat font */
+    font-weight: 900; /* Use Black 900 weight */
     font-size: 2rem;
     font-weight: bold;
     color: #000000;
     opacity: 0.8;
+    position: relative; /* Position relative for the pseudo-element */
 }
+
 
